--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hoi dan it</title>
 </head>
-<script>
-    alert('hoi dan it wit me')
+<script src="./video2\video2.js">
+   
 </script>
 <body>
     <h1>hello worl from html</h1>
