--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hoi dan it</title>
 </head>
-<script src="./video2\video2.js">
+<script src="video3\video3.js">
    
 </script>
 <body>
