--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hoi dan it</title>
 </head>
-<script src="video13_block_scope/video13.js">
+<script src="video17_reduce/video17.js">
    
 </script>
 <body>
